# personal-ledger-backend

./: .editorconfig  .env.example  .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  Makefile.toml  README.md  book.toml  build.rs  index.html  mkdocs.yml
.devcontainer/: devcontainer copy.json  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/prompts/: postgresql-optimization.prompt.md  prompts.md  sql-optimization.prompt.md
.github/workflows/: cargo-test.yaml  deploy-docs.yml  deploy-mdbook.yaml  deploy-mdbook.yml  docker.yml  release-binaries.yaml  release-docker-images.yaml  release-docker-images.yml
.sqlx/: query-09fea28d1e3c625d028fec564f70d9f8414d09ba21df9645d3681822de67427e.json  query-0d8ec8f5b00c5bd4e21bea65da30c351260927ab0525e4c4e5d1b1e09e9fa71c.json  query-254f0f4f3b2114e8161855b5f5040c2bec50be22a0ae56c56a4a8f993fbc6745.json  query-2eab0456865d95f7f39067a7e4df06632fb4f238e2dd9796a8bfcf23332d3e89.json  query-327664f66bc52d63cd09a5c72c4ed4dd02099acd2d47f89837d6e3304c84d448.json  query-4c80e25a1e625c775efb0f7279ede7ad52db2758f48fd813ee54eaf61588b7db.json  query-62b8b887a540c042323a551e25a23a7b294f23b6b9d6a44b5f6826bddf51c2a4.json  query-769ad0e1db7d5a2fe88d7ff7a4a331e74ed2c2eece3b0797b9a025936efe3c32.json  query-78181e77fd1ae8e52d62de6268059927c03b273b628745423de05c464fb1b0dc.json  query-82c4bd16ffa3b6902e059eb60ee75c2a2954acfab7dcc7b60d6a424cd4009b09.json  query-85a1834413b3110a831e075e656a21d45d0ed15e440a9c3f85e5efce9d067031.json  query-881d12b2a38f9a342b3b315ba9834a21d35aa403496240e0d354c6dbf7c4f55e.json  query-88b236591735bb2bbec35fbee926492eeea717b667384d020568269ed9280963.json  query-8e064fb2eba9a25412cc36067e341d833cc3542b8a90abbad8e36ff8e3ee6459.json  query-992da607e6a6947f973e33dbbb006004f2cd1204206c67959da896bd45c12bb2.json  query-ac1c41e8b198e2cb06d1e96b921cadc406e7d3bee57a22ff4c48d9f91ca222ae.json  query-ba5c12188f21e1eacaedb4298c0dc2eb535bb4e56b7f7663b34a233d5bee6171.json  query-d2c9d0124fa56d07a1b6020ebba4b1198d6f0810bc78953052c39a6d6b9edad3.json  query-de9cdd443397833f8f6c03101cd4b6dab99eaf55afe8c1285e176f0ee8e97fc1.json  query-e39419ef67526584c700c6b2dbac2f0728233e6e42299518cae478ec1cf38b10.json  query-e3ed292dc6709efe00b4baa12fead1fc3c77fa99b4353a85a793ad3b86068813.json  query-f13f28e046a65444ab2864a08e59493f22da16bd5312478836f50419dbbe6339.json  query-f14fd43e8331939348b634129ca1fe8656e60f6df103378b6af46ff3d2d71afa.json
api/: index.html
config/: ledger-backend.conf
docs/: SUMMARY.md  api.md  categories.md  configuration.md  copilot-instructions.md  devcontainer.md  error.md  index.md
docs/copilot/: README.md  config.md  examples.md  rust.md
migrations/: 00000000000_postgres_extensions.sql  00000000001_create_categories.sql
queries/: drop_all.sql
search/: search_index.json
src/: config.rs  error.rs  lib.rs  main.rs  rpc.rs  telemetry.rs
src/config/: database.rs  error.rs  ledger.rs  mod.rs  server.rs
src/database/: connect.rs  error.rs  mod.rs  pool.rs  test.rs
src/database/categories/: builder.rs  delete.rs  find.rs  insert.rs  mod.rs  model.rs  update.rs
src/domain/: category_types.rs  db_engine.rs  hex_color.rs  mod.rs  row_id.rs  url_slug.rs
src/rpc/: mod.rs  personal_ledger.rs
src/server/: mod.rs  router.rs  tonic.rs
src/services/: error.rs  mod.rs  utilities.rs
src/services/categories/: activate.rs  create.rs  deactivate.rs  delete.rs  get.rs  list.rs  mod.rs  service.rs  update.rs
tests/api/: main.rs
tests/api/categories/: activate.rs  create.rs  deactivate.rs  delete.rs  delete_batch.rs  get.rs  list.rs  mock.rs  mod.rs  update.rs
tests/api/helpers/: mocks.rs  mod.rs  spawn_client.rs  spawn_server.rs
