[package]
name = "personal-ledger-backend"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.0"
edition = "2024"
description = "The tonic backend server for Personal Ledger."
documentation = "https://ianteda.github.io/personal-ledger-backend/"
homepage = "https://github.com/IanTeda/personal_ledger-backend"
repository = "https://github.com/IanTeda/personal_ledger-backend"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["rust", "ledger", "money", "grpc", "tonic"]

[workspace.lints.rust]
unsafe_code = "forbid"

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
name = "personal_ledger_backend"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42" }
config = { version = "0.15.16"}
directories = { version = "6.0.0" }
prost = { version = "0.14.1" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2" }
tonic-health = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tonic-reflection = { version = "0.14.2" }
tracing = { version = "0.1.41" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }

[dev-dependencies]
tracing-test = "0.2.5"
temp-env = "0.3.6"
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
