[package]
name = "personal-ledger-backend"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.0"
edition = "2024"
description = "The tonic backend server for Personal Ledger."
documentation = "https://ianteda.github.io/personal-ledger-backend/"
homepage = "https://github.com/IanTeda/personal_ledger-backend"
repository = "https://github.com/IanTeda/personal_ledger-backend"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["rust", "ledger", "money", "grpc", "tonic"]

[workspace.lints.rust]
unsafe_code = "forbid"

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
name = "personal_ledger_backend"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde", "clock"] }
config = { version = "0.15.17"}
directories = { version = "6.0.0" }
prost = { version = "0.14.1" }
rand = { version = "0.9.2" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
thiserror = { version = "2.0.17" }
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.2" }
tonic-health = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tonic-reflection = { version = "0.14.2" }
tracing = { version = "0.1.41" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }


[dev-dependencies]
tracing-test = "0.2.5"
temp-env = "0.3.6"
serde_json = "1.0"
fake = { version = "4.4.0", features = [
    "derive",
    "bigdecimal",
    "chrono",
    "chrono-tz",
    "http",
    "time",
    "uuid",
] }

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
